--- a/Kontaktai.html
+++ b/Kontaktai.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kontaktai</title>
-    <link rel="stylesheet" href="assets/css/kontaktai.css" />
-  </head>
 
-  <body>
-    <section class="section kontaktai">
-      <div class="container">
-        <div class="box-button-wraper clearfix">
-          <div class="box">
-            <div class="left-box">
-              <h1>Let's talk about evеrything!</h1>
-              <p>
-                Lorem ipsum dolorsit amet, consectetur adipisicing elit.
-                Voluptas debitis, fugit natus?
-              </p>
-              <img src="assets/img/undraw-contact.svg" alt="img" />
-            </div>
-            <div class="right-box">
-              <form action="" method="">
-                <div class="forms">
-                  <label for="">
-                    <input type="text" placeholder="Your name" required />
-                  </label>
-                </div>
-                <div class="forms">
-                  <label for="">
-                    <input type="email" placeholder="Email" required />
-                  </label>
-                </div>
-                <div class="forms">
-                  <label for="">
-                    <input type="text" placeholder="Subject" required />
-                  </label>
-                </div>
-                <div class="forms">
-                  <label for="">
-                    <input
-                      type="text"
-                      placeholder="Write your message"
-                      required
-                    />
-                  </label>
-                </div>
-              </form>
-            </div>
-            <div class="submit">
-              <label for="">
-                <input type="submit" value="Send Message" />
-              </label>
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kontaktai</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/kontaktai.css" />
+</head>
+
+<body>
+  <section class="section">
+    <div class="container">
+      <div class="box-button-wraper clearfix">
+        <div class="box">
+          <div class="left-box">
+            <h1>Let's talk about evеrything!</h1>
+            <p>
+              Lorem ipsum dolorsit amet, consectetur adipisicing elit.
+              Voluptas debitis, fugit natus?
+            </p>
+            <img src="assets/img/undraw-contact.svg" alt="img" />
           </div>
+          <div class="right-box">
+            <form action="" method="">
+              <div class="forms">
+                <label for="">
+                  <input type="text" placeholder="Your name" required />
+                </label>
+              </div>
+              <div class="forms">
+                <label for="">
+                  <input type="email" placeholder="Email" required />
+                </label>
+              </div>
+              <div class="forms">
+                <label for="">
+                  <input type="text" placeholder="Subject" required />
+                </label>
+              </div>
+              <div class="forms">
+                <label for="">
+                  <textarea name="" id="" cols="30" rows="10" placeholder="Write your message">
+
+                  </textarea>
+                </label>
+              </div>
+              <div class="submit">
+                <label for="">
+                  <input type="submit" value="Send Message" />
+                </label>
+              </div>
+            </form>
+          </div>
+          
         </div>
       </div>
-    </section>
-  </body>
+    </div>
+  </section>
+</body>
+
 </html>
