--- a/Kontaktai.html
+++ b/Kontaktai.html
@@ -27,35 +27,23 @@
           <div class="right-box">
             <form action="" method="">
               <div class="forms">
-                <label for="">
-                  <input type="text" placeholder="Your name" required />
-                </label>
+                <input type="text" placeholder="Your name" required />
               </div>
               <div class="forms">
-                <label for="">
-                  <input type="email" placeholder="Email" required />
-                </label>
+                <input type="email" placeholder="Email" required />
               </div>
               <div class="forms">
-                <label for="">
-                  <input type="text" placeholder="Subject" required />
-                </label>
+                <input type="text" placeholder="Subject" required />
               </div>
               <div class="forms">
-                <label for="">
-                  <textarea name="" id="" cols="30" rows="10" placeholder="Write your message">
-
+                <textarea name="message" cols="30" rows="10" placeholder="Write your message">
                   </textarea>
-                </label>
               </div>
               <div class="submit">
-                <label for="">
-                  <input type="submit" value="Send Message" />
-                </label>
+                <input type="submit" value="Send Message" />
               </div>
             </form>
           </div>
-          
         </div>
       </div>
     </div>
