--- a/Kontaktai.html
+++ b/Kontaktai.html
@@ -25,6 +25,7 @@
             <img src="assets/img/undraw-contact.svg" alt="img" />
           </div>
           <div class="right-box">
+            <form>
               <div class="forms">
                 <input type="text" placeholder="Your name" required />
               </div>
@@ -35,12 +36,12 @@
                 <input type="text" placeholder="Subject" required />
               </div>
               <div class="forms">
-                <textarea name="message" cols="30" rows="10" placeholder="Write your message">
-                  </textarea>
+                <textarea name="message" cols="30" rows="10" placeholder="Write your message"></textarea>
               </div>
               <div class="submit">
                 <input type="submit" value="Send Message" />
               </div>
+            </form>
            </div>
         </div>
       </div>
