--- a/kontaktai-flex.html
+++ b/kontaktai-flex.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/kontaktai-flex.css" />
+  <link rel="stylesheet" href="assets/css/kontaktai-media.css" />
+  
 </head>
 
 <body>
