--- a/position-absolute.html
+++ b/position-absolute.html
@@ -17,14 +17,17 @@
               src="https://s1.15min.lt/static/cache/NDAweDI2MCwzOTN4NjM1LDYyNjQzMCxvcmlnaW5hbCwsaWQ9NDU5MzU5OCZkYXRlPTIwMTklMkYwNCUyRjAzLDIyMzI5NTI0MTc=/kauno-automobiliu-turgus-5ca4760738cb9.jpg"
             />
             <div class="icon">
+              <div class="icon-1">
                 <i class="las la-play"></i>
-            </div>
-            <div class="icon">
+              </div>
+
+            <div class="icon-2">
               <i class="las la-play"></i>
           </div>
-          <div class="icon">
+          <div class="icon-3">
             <i class="las la-play"></i>
         </div>
+      </div>
                   </a>
         </div>
         <div class="card__description">
