Paskaitos komentarai su position absolute

--- a/position-absolute.html
+++ b/position-absolute.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
     <link rel="stylesheet" href="assets/css/position-absolute.css" />
   </head>
   <body>
@@ -14,21 +17,26 @@
         <div class="card__image">
           <a href="#">
             <img
+              alt="Nuotrauka"
               src="https://s1.15min.lt/static/cache/NDAweDI2MCwzOTN4NjM1LDYyNjQzMCxvcmlnaW5hbCwsaWQ9NDU5MzU5OCZkYXRlPTIwMTklMkYwNCUyRjAzLDIyMzI5NTI0MTc=/kauno-automobiliu-turgus-5ca4760738cb9.jpg"
             />
             <div class="icon">
               <div class="icon-1">
+                <div class="text-icon"> Interviu </div>
+              </div>
+
+              <div class="icon-2">
+                <i class="las la-play"></i>
+              </div>
+              <div class="icon-3">
                 <i class="las la-play"></i>
               </div>
 
-            <div class="icon-2">
-              <i class="las la-play"></i>
-          </div>
-          <div class="icon-3">
-            <i class="las la-play"></i>
-        </div>
-      </div>
-                  </a>
+              <div class="icon-3">
+                <i class="las la-play"></i>
+              </div>
+            </div>
+          </a>
         </div>
         <div class="card__description">
           <a href="#">
